syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.trade.finance.prod";
option java_outer_classname = "financeProductInfo";
option objc_class_prefix = "FPI";

service FinanceProductService {
    rpc GetFinanceProdInfo (FinanceProdInfoQuery) returns (FinanceProdInfoCollection) {
    }
    rpc GetFinanceProds (FinanceProdDetailQuery) returns (FinanceProdDetails){}

    rpc GetProds(google.protobuf.Empty) returns (ProdInfos){}

    rpc GetMoneyFund(FinanceProdInfoQuery) returns (FinanceMoneyFundInfo){}
}
//获取当前理财产品信息
message FinanceProdInfoQuery {
  int64 prod_id = 1;//理财产品Id,
  int64 group_id = 2;//理财产品类组id
  int32 oem_id = 3; //oemId 银行客户
}

message FinanceProdInfoCollection{
  repeated FinanceProdInfo financeProdInfo = 1;
}

message FinanceProdInfo {
  int64 prod_id = 1 ;//理财产品Id,
  int64 group_id = 2; //理财产品类组id
  string prod_name = 3 ; //理财产品名称
  string fund_code = 4 ;//该理财产品中的某个基金编号,
  string fund_name = 5 ;//该理财产品中的某个基金名称,
  int32 fund_share = 6 ;//该理财产品中的基金份额百分比,
}

message FinanceMoneyFundInfo{
  string fund_code = 1; //基金code
  string fund_name = 2; //基金名称
}

message ProdInfos{
  repeated ProdInfo prodInfo = 1;
}
message ProdInfo {
  int64 prod_id = 1 ;//理财产品Id,
  int64 group_id = 2; //理财产品类组id
  string prod_name = 3 ; //理财产品名称
}

//获取理财产品系列
message FinanceProdDetailQuery{
  int32 page_num = 1;//理财产品分页页号
  int32 page_size = 2;//理财分页页面size
  int32 prod_id = 3;//理财产品Id
  int32 group_id = 4; //理财产品类组id
  int32 month_num = 5; //理财产品查询的月份数
  string type = 6; //理财产品的返回类型
}

message FinanceProdDetails{
  int32 page_num = 1;//理财产品分页页号
  int32 page_size = 2;//理财分页页面size
  int32 prod_id = 3;//理财产品Id
  int32 group_id = 4; //理财产品类组id
  repeated FinanceProdDetailItem financeProdDetailItem = 5;//理财产品信息items
}
message FinanceProdDetailItem{
  map<string, google.protobuf.Any> item = 1;  //理财产品Map item
}
